# nova-study

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: circuits.rs  ivc.rs  lib.rs  nifs.rs  novacircuit.rs  pedersen.rs  r1cs.rs  sumcheck.rs  transcript.rs  utils.rs
src/hypernova/: README.md  ccs.rs  mod.rs  multifolding.rs  sumcheck.rs
